<?xml version="1.0"?>
<package format="2">
    <name>owen_gazebo</name>
    <version>1.0.0</version>
    <description>The owen_gazebo package</description>
    <maintainer email="owengallagher@icloud.com">owengallagher</maintainer>
    <license>MIT</license>

    <!-- The *depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <depend>roscpp</depend>
    <depend>pioneer3at</depend>

    <exec_depend>gazebo_ros</exec_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Provide path to custom models, which is exported to GAZEBO_MODEL_PATH -->
    <gazebo_ros gazebo_model_path="${prefix}/models/" />
  </export>
</package>
